80% completion on structure and styling of site

--- a/index.html
+++ b/index.html
@@ -5,10 +5,88 @@
     <title>Search App</title>
 </head>
 <body>
-<header>
-   
+<header id="nav-header">
+  <nav>
+    <h1><a href="">Marvel Heroes</a></h1>
+    <ul>
+       <li><a href="#">Home</a></li>
+       <li><a href="#">About</a></li>
+       <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <section id="search-section">
+    <form action="">
+      <label for="search">Search for marvel hero</label>
+      <input class="txt-search" type="text" name="search" placeholder="Search...">
+      <button></button>
+    </form>
+  </section>
 </header>
-
+<section>
+  <h2>Search Results:</h2>
+  <ul class="search-results">
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+    <li>
+      <img src="/assets/desktop.png" alt="">
+      <h3>Batman</h3>
+      <h4>DC Comics</h4>
+    </li>
+  </ul>
+</section>
 
 </body>
 </html>
