--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header id="nav-header">
   <nav>
-    <h1><a href="">Marvel Heroes</a></h1>
+    <h1><a href="">Pokemon Search</a></h1>
     <ul>
        <li><a href="#">Home</a></li>
        <li><a href="#">About</a></li>
@@ -15,78 +15,22 @@
     </ul>
   </nav>
   <section id="search-section">
-    <form action="">
-      <label for="search">Search for marvel hero</label>
+    <form action="#" method="">
+      <label for="search">Search For Pokemon By Types <span>(e.g normal, ground, dark)</span></label>
       <input class="txt-search" type="text" name="search" placeholder="Search...">
-      <button></button>
+      <button class="btn-search"></button>
     </form>
   </section>
 </header>
-<section>
+<section id="search-results">
   <h2>Search Results:</h2>
-  <ul class="search-results">
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
-    <li>
-      <img src="/assets/desktop.png" alt="">
-      <h3>Batman</h3>
-      <h4>DC Comics</h4>
-    </li>
+  <ul>
   </ul>
 </section>
 
 </body>
+<footer>
+  <p>Built by Matthew Pezzente for DWS2</p>
+  <script type="text/javascript" src="js/main.js"></script>
+</footer>
 </html>
