Home page pre=populated with content

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Search App</title>
+    <title>Pokémon Search App</title>
 </head>
 <body>
 <header id="nav-header">
+  <h1><a href="">Pokémon Search</a></h1>
   <nav>
-    <h1><a href="">Pokemon Search</a></h1>
     <ul>
        <li><a href="#">Home</a></li>
        <li><a href="#">About</a></li>
@@ -25,6 +25,7 @@
 <section id="search-results">
   <h2>Search Results:</h2>
   <ul>
+    <li><img src="http://www.pokestadium.com/sprites/xy/pidgey.gif" alt=""><h3>Pidgey</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/pidgeotto.gif" alt=""><h3>Pidgeotto</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/pidgeot.gif" alt=""><h3>Pidgeot</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/rattata.gif" alt=""><h3>Rattata</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/raticate.gif" alt=""><h3>Raticate</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/spearow.gif" alt=""><h3>Spearow</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/fearow.gif" alt=""><h3>Fearow</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/jigglypuff.gif" alt=""><h3>Jigglypuff</h3><p class="type-fairy">fairy</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/wigglytuff.gif" alt=""><h3>Wigglytuff</h3><p class="type-fairy">fairy</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/meowth.gif" alt=""><h3>Meowth</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/persian.gif" alt=""><h3>Persian</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/farfetchd.gif" alt=""><h3>Farfetchd</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li>
   </ul>
 </section>
 
