Semantic updates to HTML, Javascript & SASS refactoring

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </ul>
   </nav>
   <section id="search-section">
-    <form action="#" method="">
+    <form action="#" method="GET">
       <label for="search">Search For Pokemon By Types <span>(e.g normal, ground, dark)</span></label>
-      <input class="txt-search" type="text" name="search" placeholder="Search...">
+      <input class="txt-search" id="search" type="text" name="search" placeholder="Search...">
       <button class="btn-search"></button>
     </form>
   </section>
@@ -25,13 +25,12 @@
 <section id="search-results">
   <h2>Search Results:</h2>
   <ul>
-    <li><img src="http://www.pokestadium.com/sprites/xy/pidgey.gif" alt=""><h3>Pidgey</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/pidgeotto.gif" alt=""><h3>Pidgeotto</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/pidgeot.gif" alt=""><h3>Pidgeot</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/rattata.gif" alt=""><h3>Rattata</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/raticate.gif" alt=""><h3>Raticate</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/spearow.gif" alt=""><h3>Spearow</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/fearow.gif" alt=""><h3>Fearow</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/jigglypuff.gif" alt=""><h3>Jigglypuff</h3><p class="type-fairy">fairy</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/wigglytuff.gif" alt=""><h3>Wigglytuff</h3><p class="type-fairy">fairy</p><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/meowth.gif" alt=""><h3>Meowth</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/persian.gif" alt=""><h3>Persian</h3><p class="type-normal">normal</p></li><li><img src="http://www.pokestadium.com/sprites/xy/farfetchd.gif" alt=""><h3>Farfetchd</h3><p class="type-flying">flying</p><p class="type-normal">normal</p></li>
   </ul>
 </section>
 
-</body>
 <footer>
   <p>Built by Matthew Pezzente for DWS2</p>
   <script type="text/javascript" src="js/main.js"></script>
 </footer>
+</body>
 </html>
