--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Pokémon Search App</title>
+    <title>Pokemon Search App</title>
 </head>
 <body>
 <header id="nav-header">
-  <h1><a href="">Pokémon Search</a></h1>
+  <h1><a href="">Pokemon Search</a></h1>
   <nav>
     <ul>
        <li><a href="#">Home</a></li>
