--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Pokemon Search App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  
+  <title>Pokemon Search App</title>
 </head>
 <body>
-<header id="nav-header">
-  <h1><a href="">Pokemon Search</a></h1>
-  <nav>
-    <ul>
+<header id="header-nav">
+  <nav class="nav-main-mobile">
+    <a href="#"><h1>Pokemon Search</h1></a>
+    <button class="btn-hamburger"></button>
+    <ul class="links-wrapper-mobile">
        <li><a href="#">Home</a></li>
        <li><a href="#">About</a></li>
        <li><a href="#">Contact</a></li>
@@ -27,10 +30,10 @@
   <ul>
   </ul>
 </section>
-
 <footer>
-  <p>Built by Matthew Pezzente for DWS2</p>
-  <script type="text/javascript" src="js/main.js"></script>
+  <h3>Built by Matthew Pezzente for DWS2</h3>
 </footer>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/nav.js"></script>
 </body>
 </html>
